--- a/CSS/box-model/style.css
+++ b/CSS/box-model/style.css
@@ -49,12 +49,14 @@ body {
   font-size: 48px;
   color: #031721;
   text-align: center;
+  background-color: rgb(176, 176, 211);
+  border-style: dashed;
 }
 
 p {
   line-height: 1.6;
   letter-spacing: 1px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 /* box model css  */
