--- a/CSS/advanced_css/animation/style.css
+++ b/CSS/advanced_css/animation/style.css
@@ -61,10 +61,10 @@ h1 {
   animation-name: trip;
   animation-duration: 2.5s;
   animation-timing-function: linear;
-  /* animation-delay: 2s; */
-  animation-iteration-count: 2;
+  animation-delay: 2s; 
+  animation-iteration-count: infinite;
   animation-direction: alternate;
-  /* animation-fill-mode: backwards; */
+  animation-fill-mode: backwards; 
 }
 
 /* @keyframes lefttoright {
