--- a/CSS/filters/style.css
+++ b/CSS/filters/style.css
@@ -71,8 +71,8 @@ img {
   -o-border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  /*-webkit-filter: opacity(1);
-  */
+  -webkit-filter: opacity(15);
+
 }
 
 /** ------------------------------------- -->
