--- a/CSS/grid/Grid.css
+++ b/CSS/grid/Grid.css
@@ -5,16 +5,19 @@
 }
 body{
     background-color: black;
-    height: 100px;
     color: white;
 }
 .grid-container{
     display: grid;
-    grid-template-columns: 200px 200px;
-    grid-template-rows: 200px 200px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    height: 400px;
+    width: 400px;
+    background-color: red;
 }
 .First{
-    background-color: red;
+    background-color: rgb(187, 16, 16);
 }
 .Second{
     background-color: rgb(139, 156, 125);
