--- a/CSS/advanced_css/transform/style.css
+++ b/CSS/advanced_css/transform/style.css
@@ -48,8 +48,8 @@ body {
 }
 
 .box {
-  /* width: 250px;
-    height: 100px; */
+  width: 250px;
+  height: 100px;
   /* below three properties for scale and transform */
   width: 250px;
   height: 250px;
@@ -62,7 +62,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border-radius: 50%; */
   transition-property: all;
 }
 
@@ -75,6 +74,31 @@ body {
   -moz-transition: all 1s linear;
   -ms-transition: all 1s linear;
   -o-transition: all 1s linear;
+  animation-name: moving;
+  animation-iteration-count: infinite;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+   animation-fill-mode: forwards;
+}
+.box:hover{
+  transform: scale(3);
+  transform: scalex(2);
+  transform: scaleY(3);
+  transform: translate(100px, 500px);
+  transform: translatex(200px);
+  transform: translateY(200px);
+  transform: translate3d(200px);
+  transform: rotate(20deg);
+  transform: skew(30deg);
+}
+@keyframes moving
+ {
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
 }
 
 /** ------------------------------------- -->
