--- a/Projects/Project_09/style.css
+++ b/Projects/Project_09/style.css
@@ -50,11 +50,7 @@ h1{
   max-width: 1100px;
   margin: 50px auto;
 }
-.grid-items{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .cards{
   max-width: 320px;
   height: 400px;
@@ -79,17 +75,34 @@ h1{
     align-items: center;
 }
 .contact {
-  background-color: #515603;
+  background-color: 
+#07132b;
 }
 .about {
-  background-color: #722300;
+  background-color: #de4b25;
+}
+
+.grid-containerss {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 1px;
+  width: 100%;
+  height: 300px;
 }
 
 .contact,
 .about {
-  min-height: 200px;
+  min-height: 100px;
   padding: 32px;
   color: white;
+  border-radius: 5px;
+}
+.contact:hover{
+  background-color: #04aa6d;
+}
+.about:hover{
+  background-color: #008080;
 }
 .about h2,
 .contact h2 {
@@ -105,5 +118,4 @@ h1{
     color: #fff;
     text-align: center;
      padding: 20px;
-
 }
